--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -93,7 +93,8 @@
     "trustedDownloadFormat": "Trusted Download Format",
     "trustedUploadFormat": "Trusted Upload Format",
     "downloadPrivilege": "Download Privilege",
-    "uploadPrivilege": "upload Privilege"
+    "uploadPrivilege": "upload Privilege",
+    "recordingActivity": "recording Activity"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
