--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -171,6 +171,7 @@
     "monthlySelect": "Monthly",
     "weeklySelect": "Weekly",
     "dailySelect": "daily",
+    "hourlySelect": "hourly",
     "arbitrary": "Arbitrary",
     "send": "Send",
     "reportsChart": "ReportsChart",
