--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -166,6 +166,7 @@
     "monthlySelect": "ماهانه",
     "weeklySelect": "هفتگی",
     "dailySelect": "روزانه",
+    "hourlySelect": "ساعتی",
     "arbitrary": "دلخواه",
     "send": "ارسال",
     "selectTimeFrame": "بازه ای از زمان را انتخاب کنید",
