--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -185,7 +185,7 @@
     "to": "To",
     "enterPriodOfTime": "Enter the desired period of time",
     "noReportAvailable": "There is currently no report available",
-    "inRecording": "In Recording"
+    "usedPamLicense": "used PAM License"
   },
   "groupManagement": {
     "person": "person",
