--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -185,7 +185,7 @@
     "to": "الی",
     "enterPriodOfTime": "بازه زمانی مورد نظر را وارد کنید",
     "noReportAvailable": "درحال حاظر گزارشی وجود ندارد",
-    "inRecording": "درحال ضبط"
+    "usedPamLicense": "لایسنس PAM استفاده شده"
   },
   "groupManagement": {
     "person": "نفر",
