--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -185,7 +185,8 @@
     "to": "To",
     "enterPriodOfTime": "Enter the desired period of time",
     "noReportAvailable": "There is currently no report available",
-    "usedPamLicense": "used PAM License"
+    "usedPamLicense": "used PAM License",
+    "activeDeactive": "Active/Deactive"
   },
   "groupManagement": {
     "person": "person",
