--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -1,7 +1,9 @@
 {
   "login": {
     "loginTitle": "لطفا ایمیل و گذرواژه خود را وارد کنید",
-    "login": "وررود به حساب کاربری"
+    "login": "وررود به حساب کاربری",
+    "otp": " لطفا کد دریافت شده را وارد کنید",
+    "confirm": "تایید"
   },
   "header": {
     "user": "کاربر",
