update ( remove comment )

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -189,7 +189,7 @@
     "goToHome": "برو به خانه",
     "to": "الی",
     "enterPriodOfTime": "بازه زمانی مورد نظر را وارد کنید",
-    "noReportAvailable": "درحال حاظر گزارشی وجود ندارد",
+    "noReportAvailable": "درحال حاضر گزارشی وجود ندارد",
     "usedPamLicense": "لایسنس PAM استفاده شده",
     "somthingWentWrong": "مشگلی پیش آمد",
     "genrateQrcode": "تولید Qrcode ",
