update ( quecode and modal admin style )

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -192,7 +192,9 @@
     "activeDeactive": "Active/Deactive",
     "somthingWentWrong": "Somthing Went Wrong",
     "genrateQrcode": "genrate Qrcode",
-    "activateOtp": "activate Otp"
+    "activateOtp": "activate Otp",
+    "userInfo": "user Info",
+    "accessList": "Access list"
   },
   "groupManagement": {
     "person": "person",
