feat : session recording permission &  recording status component

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -99,7 +99,8 @@
     "startDate": "start Date",
     "endDate": "end Date",
     "activeQrcode": " Qrcode ",
-    "activeOtp": "  Otp "
+    "activeOtp": "  Otp ",
+    "isRecording": "Is Recording"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
