--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -81,7 +81,8 @@
     "edit": "ویرایش",
     "delete": "حذف",
     "upload": "آپلود",
-    "webcamPrivilege": "دسترسی وبکم",
+    "webcamPrivilege": "دسترسی کنفرانس",
+    "conferencePrivilege": "دسترسی وبکم",
     "microphonePrivilege": "دسترسی میکروفن",
     "timeLimitDuration": "محدود کردن براساس زمان",
     "timeLimitValueInHour": "محدود کردن براساس ساعت",
