--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -207,7 +207,8 @@
     "choiceUsers": "انتخاب کاربران",
     "newAdmin": "ادمین جدید",
     "users": "کاربران",
-    "admins": "ادمین ها"
+    "admins": "ادمین ها",
+    "next": "مرحله بعد"
   },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
