--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -209,7 +209,8 @@
     "newAdmin": "ادمین جدید",
     "users": "کاربران",
     "admins": "ادمین ها",
-    "next": "مرحله بعد"
+    "next": "مرحله بعد",
+    "newUser": "کاربر جدید"
   },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
