--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -212,6 +212,12 @@
     "next": "مرحله بعد",
     "newUser": "کاربر جدید"
   },
+  "onlineAssistant": {
+    "internet": "اینترنت",
+    "remote": "دسترسی دستیار ",
+    "exitFromUserProfile": "خروج از حساب کاربری",
+    "enterDesktop": "ورود به دسکتاپ"
+  },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
     "systemAdminDescription2": "2- توجه داشته باشید کاربری که به عنوان سوپر ادمین شناخته شود ، قابلیت اضافه و حذف کردن دیگر ادمین‌ها را دارد.",
