--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -192,11 +192,12 @@
     "noReportAvailable": "There is currently no report available",
     "usedPamLicense": "used PAM License",
     "activeDeactive": "Active/Deactive",
-    "somthingWentWrong": "Somthing Went Wrong",
+    "somethingWentWrong": "Somthing Went Wrong",
     "genrateQrcode": "genrate Qrcode",
     "activateOtp": "activate Otp",
     "userInfo": "user Info",
-    "accessList": "Access list"
+    "accessList": "Access list",
+    "onlineAssistance": "Online Assistanse"
   },
   "groupManagement": {
     "person": "person",
