--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -193,11 +193,12 @@
     "enterPriodOfTime": "بازه زمانی مورد نظر را وارد کنید",
     "noReportAvailable": "درحال حاضر گزارشی وجود ندارد",
     "usedPamLicense": "لایسنس PAM استفاده شده",
-    "somthingWentWrong": "مشگلی پیش آمد",
+    "somethingWentWrong": "مشگلی پیش آمد",
     "genrateQrcode": "تولید Qrcode ",
     "activateOtp": "فعال کردن otp",
     "userInfo": "مشخصات کاربر",
-    "accessList": "لیست دسترسی"
+    "accessList": "لیست دسترسی",
+    "onlineAssistance": "دستیار آنلاین"
   },
   "groupManagement": {
     "person": "نفر",
