fix spell& feat : valid enter

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -213,7 +213,7 @@
     "next": "Next",
     "newUser": "new user"
   },
-  "onlineAssistant": {
+  "onlineAssistance": {
     "internet": "internet",
     "remote": "Remote Assistance",
     "exitFromUserProfile": "Exit From User Profile",
