--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -214,7 +214,7 @@
     "next": "مرحله بعد",
     "newUser": "کاربر جدید"
   },
-  "onlineAssistant": {
+  "onlineAssistance": {
     "internet": "اینترنت",
     "remote": "دسترسی دستیار ",
     "exitFromUserProfile": "خروج از حساب کاربری",
