--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -220,7 +220,9 @@
     "exitFromUserProfile": "Exit From User Profile",
     "enterDesktop": "Enter Desktop",
     "admins": " Admins Of Groups",
-    "members": "Member of Groups"
+    "members": "Member of Groups",
+    "onlineUser": "Active User",
+    "offlineUser": "Offline User "
   },
   "title": {
     "systemAdminDescription1": "1- Any user added is recognized as a system admin and has access to system changes.",
