--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -230,19 +230,22 @@
     "offlineUser": "یوزر افلاین"
   },
   "license": {
-    "licenseId": "شناسه مجوز",
-    "licenseValidation": "اعتبارسنجی مجوز",
-    "licenseExpirationDate": "تاریخ انقضای مجوز",
-    "licenseCreationDate": "تاریخ ایجاد مجوز",
-    "recordLicenseNumber": "شماره مجوز ضبط",
-    "assistanceLicense": "مجوز پشتیبانی",
-    "assistanceLicenseNumber": "شماره مجوز پشتیبانی",
-    "totalUserLicense": "مجموع مجوز کاربران",
-    "concurrentUsersLicense": "مجوز کاربران همزمان",
-    "clipboardAccessLicense": "مجوز دسترسی به کلیپ بورد",
-    "clipboardAccessLicenseNumber": "شماره مجوز دسترسی به کلیپ بورد",
-    "chatRoomLicense": "مجوز اتاق گفتگو",
-    "chatroomLicenseNumber": "شماره مجوز اتاق گفتگو"
+    "licenseId": "شناسه لایسنس",
+    "licenseValidation": "اعتبارسنجی لایسنس",
+    "licenseExpirationDate": "تاریخ انقضای لایسنس",
+    "licenseCreationDate": "تاریخ ایجاد لایسنس",
+    "recordLicenseNumber": "شماره لایسنس ضبط",
+    "assistanceLicense": "لایسنس پشتیبانی",
+    "assistanceLicenseNumber": "شماره لایسنس پشتیبانی",
+    "totalUserLicense": "مجموع لایسنس کاربران",
+    "concurrentUsersLicense": "لایسنس کاربران همزمان",
+    "clipboardAccessLicense": "لایسنس دسترسی به کلیپ بورد",
+    "clipboardAccessLicenseNumber": "شماره لایسنس دسترسی به کلیپ بورد",
+    "chatRoomLicense": "لایسنس اتاق گفتگو",
+    "chatroomLicenseNumber": "شماره لایسنس اتاق گفتگو",
+    "licenseStatus": "وضعیت لایسنس",
+    "licenseNumbers": "تعداد لایسنس",
+    "activeNumbers": "تعداد فعال شده"
   },
   "title": {
     "systemAdminDescription1": "1- هرکاربری که اضافه میشود ، به عنوان ادمین سیستم شناخته و دسترسی برای تغییرات سامانه را دارد.",
