feat : jsdoc & end env for online assistance

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -194,7 +194,7 @@
     "enterPriodOfTime": "بازه زمانی مورد نظر را وارد کنید",
     "noReportAvailable": "درحال حاضر گزارشی وجود ندارد",
     "usedPamLicense": "لایسنس PAM استفاده شده",
-    "somethingWentWrong": "مشگلی پیش آمد",
+    "somethingWentWrong": "مشکلی پیش آمد",
     "genrateQrcode": "تولید Qrcode ",
     "activateOtp": "فعال کردن otp",
     "userInfo": "مشخصات کاربر",
