fix :  english titles

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -114,7 +114,7 @@
     "updateSetting": "Update Settings",
     "update": "Update",
     "saveSettings": "Save Settings",
-    "preparationTheDesktop": "Preparation the Desktop",
+    "preparationTheDesktop": " Desktop Preparation",
     "extensionList": "Extension Lists",
     "infectedFile": "infected File"
   },
@@ -128,11 +128,11 @@
     "setting": "Settings",
     "pageBack": "Previous Page",
     "changeNameAndPassword": "Change Name And  Password",
-    "sucessfulyUpdated": "Sucessfuly Updated",
+    "sucessfulyUpdated": "Successfully Updated",
     "sureAboutThis": "Are You Sure About This ?",
     "yes": "Yes",
     "no": "No",
-    "sucessfylySaved": "Sucessfyly Saved",
+    "sucessfylySaved": "Successfully Saved",
     "lastName": "Last Name",
     "name": "Name",
     "repeatNewPassword": "Repeat New Password",
@@ -156,8 +156,8 @@
     "newPassword": "New Password",
     "repeatNewPasswordNotSame": "Repeat New Password Is Not The Same.",
     "language": "Language",
-    "callServicess": "Call Servicess",
-    "dontHaveAccess": "You dont Have Access",
+    "callServicess": "Call Services",
+    "dontHaveAccess": "You don't Have Access",
     "limitedNumberRequest": "The number of your requests has been limited. Please try again in one minute.",
     "pleaseBePatient": "Please be patient",
     "addNewFile": "add new String File",
@@ -192,13 +192,13 @@
     "enterPriodOfTime": "Enter the desired period of time",
     "noReportAvailable": "There is currently no report available",
     "usedPamLicense": "used PAM License",
-    "activeDeactive": "Active/Deactive",
-    "somethingWentWrong": "Somthing Went Wrong",
-    "genrateQrcode": "genrate Qrcode",
+    "activeDeactive": "Active/Deceive",
+    "somethingWentWrong": "Something Went Wrong",
+    "genrateQrcode": "generate Qrcode",
     "activateOtp": "activate Otp",
     "userInfo": "user Info",
     "accessList": "Access list",
-    "onlineAssistance": "Online Assistanse",
+    "onlineAssistance": "Online Assistance",
     "onlineAssistanceDetail": "online Assistance Detail",
     "noData": "No Data",
     "evidenceGathering": "Evidence Gathering",
