fix : KNOWLEDGE_MANAGEMENT

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -114,7 +114,7 @@
     "updateSetting": "Update Settings",
     "update": "Update",
     "saveSettings": "Save Settings",
-    "preparationTheDesktop": " Desktop Preparation",
+    "desktopThePreparation": " Desktop Preparation",
     "extensionList": "Extension Lists",
     "infectedFile": "infected File"
   },
