--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -115,7 +115,7 @@
     "updateSetting": "بروزرسانی تنظیمات",
     "update": "بروزرسانی",
     "saveSettings": "ذخیره تنظیمات",
-    "preparationTheDesktop": "در حال آماده‌سازی دسکتاپ",
+    "desktopThePreparation": "در حال آماده‌سازی دسکتاپ",
     "extensionList": "لیست extension ها",
     "infectedFile": "فایل آلوده"
   },
