feat: add monitoring section

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -120,6 +120,7 @@
   },
   "global": {
     "knowledgeManagement": "Knowledge Management",
+    "monitoring": "Monitoring",
     "userName": "Username",
     "password": "Password",
     "requiredField": "This field is required.",
