--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -214,7 +214,9 @@
     "status": "Status",
     "admin": "Admin",
     "user": "User",
-    "group": "Group"
+    "group": "Group",
+    "fa": "Persian",
+    "en": "English"
   },
   "groupManagement": {
     "person": "person",
