fix: update translate file

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -218,7 +218,7 @@
     "user": "یوزر",
     "group": "گروه",
     "fa": "فارسی",
-    "en": "فارسی"
+    "en": "انگلیسی"
   },
   "groupManagement": {
     "person": "نفر",
