feat:add storybook for DropdownIcon

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -215,9 +215,7 @@
     "status": "Status",
     "admin": "Admin",
     "user": "User",
-    "group": "Group",
-    "fa": "Persian",
-    "en": "English"
+    "group": "Group"
   },
   "groupManagement": {
     "person": "person",
