fix :  useLogout redirect

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -1,7 +1,7 @@
 {
   "login": {
     "loginTitle": "لطفا ایمیل و گذرواژه خود را وارد کنید",
-    "login": "وررود به حساب کاربری",
+    "login": "ورود به حساب کاربری",
     "otp": " لطفا کد دریافت شده را وارد کنید",
     "confirm": "تایید"
   },
