feat: update translateFile

--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -1,6 +1,6 @@
 {
   "login": {
-    "loginTitle": "برای ورود نام کاربری و کلمه عبور را وارد",
+    "loginTitle": "برای ورود نام کاربری و کلمه عبور را وارد کنید",
     "login": "ورود به سامانه",
     "otp": " لطفا کد دریافت شده را وارد کنید",
     "confirm": "تایید",
