--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -216,7 +216,9 @@
     "status": " وضعیت",
     "admin": "ادمین",
     "user": "یوزر",
-    "group": "گروه"
+    "group": "گروه",
+    "fa": "فارسی",
+    "en": "انگلیسی"
   },
   "groupManagement": {
     "person": "نفر",
