--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -214,7 +214,8 @@
     "status": "Status",
     "admin": "Admin",
     "user": "User",
-    "group": "Group"
+    "group": "Group",
+    "changePassword": "Change Password"
   },
   "groupManagement": {
     "person": "person",
