--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -102,7 +102,8 @@
     "endDate": "end Date",
     "activeQrcode": " Qrcode ",
     "activeOtp": "  Otp ",
-    "isRecording": "Is Recording"
+    "isRecording": "Is Recording",
+    "yesterday": "Yesterday"
   },
   "dashboard": {
     "adminLists": "Admin Lists",
