--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -234,6 +234,8 @@
     "newUser": "new user"
   },
   "onlineAssistance": {
+    "loginType":"Login type",
+    "loginTypeChoose":"Choose your login type",
     "internet": "internet",
     "remote": "Remote Assistance",
     "exitFromUserProfile": "Exit From User Profile",
