--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -2,7 +2,8 @@
   "login": {
     "login": "ورود به سامانه",
     "loginTitle": "برای ورود نام کاربری و کلمه عبور را وارد کنید",
-    "otp": " لطفا کد دریافت شده را وارد کنید",
+    "otp": "کد ارسال شده به ایمیل‌تان را وارد کنید",
+    "otpCode": "واردکردن کد",
     "confirm": "تایید",
     "forget": "رمز عبور خود را فراموش کرده اید؟"
   },
