fix: update translate file

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -117,7 +117,8 @@
     "saveSettings": "Save Settings",
     "desktopThePreparation": " Desktop Preparation",
     "extensionList": "Extension Lists",
-    "infectedFile": "infected File"
+    "infectedFile": "infected File",
+    "days": "Days"
   },
   "admin": {
     "adminUserName": "abc@abc.com",
