fix: update translation.json file

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -139,6 +139,7 @@
     "sureAboutThis": "Are You Sure About This ?",
     "yes": "Yes",
     "no": "No",
+    "selectDate": "Select Date",
     "sucessfylySaved": "Successfully Saved",
     "lastName": "Last Name",
     "name": "Name",
