--- a/src/assets/locales/fa/translation.json
+++ b/src/assets/locales/fa/translation.json
@@ -139,6 +139,7 @@
     "sucessfulyUpdated": "باموفقیت بروزرسانی شد.",
     "sureAboutThis": "از انجام این کار مطمئن هستید؟",
     "yes": "بله",
+    "selectDate": "انتخاب تاریخ",
     "no": "خیر",
     "sucessfylySaved": "باموفقیت ذخیره شد",
     "lastName": "نام خانوادگی",
